Display pages spacing

--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -137,7 +137,7 @@
 
     <section id="program-overview">
       <a name="#/programs/{{programID}}/view#overview"></a>
-      <div class="sam-ui hidden section divider"></div>
+      <div class="sam-ui hidden divider"></div>
       <div class="usa-grid-full">
         <div class="usa-width-two-thirds">
           <h2 id="overview">Overview</h2>
