--- a/src/app/entity/entity-object-view.page.html
+++ b/src/app/entity/entity-object-view.page.html
@@ -117,7 +117,7 @@
 				</div>
 			</div>
 			
-			<div class="sam-ui hidden section divider"></div>
+			<div class="sam-ui hidden divider"></div>
 			
 			<h2 id="core-data">Core Data</h2>
 			
