--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -84,7 +84,7 @@
 					</div>
 				</div>
 			</div>
-      <div class="sam-ui hidden section divider"></div>
+      <div class="sam-ui hidden divider"></div>
     </section>
 
 
