Adjusting header variables

--- a/src/styles/sam-ui/elements/_button.scss
+++ b/src/styles/sam-ui/elements/_button.scss
@@ -23,7 +23,7 @@ $textTransform: none;
 $tapColor: transparent;
 $fontFamily: $pageFont;
 $fontWeight: 600;
-$textColor: rgba(0, 0, 0, 0.6);
+// $textColor: rgba(0, 0, 0, 0.6);
 $textShadow: none;
 $invertedTextShadow: $textShadow;
 $borderRadius: $defaultBorderRadius;
