--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -97,6 +97,7 @@
 /* Collections */
 @import 'sam-ui/collections/grid';
 @import 'sam-ui/collections/table';
+@import 'sam-ui/collections/menu';
 
 /* Vendor Extentions */
 @import 'sam-ui/vendor/font-awesome';
@@ -120,6 +121,16 @@ home samsearchbar{
   font-size: $lead-font-size;
   line-height: $lead-line-height;
   max-width: $lead-max-width;
+}
+
+.div-fill{
+  color: $textColor;
+  .reset-icon, .reset-icon-active{
+    top: 4% !important;
+  }
+}
+.div-right .usa-button-primary{
+  background-color: #02bfe7;
 }
 
 /*******************************
