--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,36 +1,36 @@
-samHeader {
-  $header-height: 65px;
-
-  header {
-    background-color: $color-primary-darkest;
-    box-shadow: 0 2px 4px rgba(1, 2, 2, 0.1);
-    padding: 3px 0;
-    text-align: center;
-    height: $header-height;
-  }
-
-  .align-top {
-    display: inline-block;
-    vertical-align: top;
-  }
-
-  img {
-    margin-top: 1.25rem;
-    width: 30rem;
-    height: 3rem;
-  }
-
-  .logo-link {
-    margin-top: 0.5rem !important;
-    height: auto;
-    display: inline-block;
-  }
-
-  .header-links {
-    .header-item,
-    .header-link {
-      //height: $header-height - 6;      // compensate for padding
-      line-height: $header-height - 6; // compensate for padding
-    }
-  }
-}
+// samHeader {
+//   $header-height: 65px;
+// 
+//   header {
+//     background-color: $color-primary-darkest;
+//     box-shadow: 0 2px 4px rgba(1, 2, 2, 0.1);
+//     padding: 3px 0;
+//     text-align: center;
+//     height: $header-height;
+//   }
+// 
+//   .align-top {
+//     display: inline-block;
+//     vertical-align: top;
+//   }
+// 
+//   img {
+//     margin-top: 1.25rem;
+//     width: 30rem;
+//     height: 3rem;
+//   }
+// 
+//   .logo-link {
+//     margin-top: 0.5rem !important;
+//     height: auto;
+//     display: inline-block;
+//   }
+// 
+//   .header-links {
+//     .header-item,
+//     .header-link {
+//       //height: $header-height - 6;      // compensate for padding
+//       line-height: $header-height - 6; // compensate for padding
+//     }
+//   }
+// }
