--- a/src/styles/pages/_organization-detail.scss
+++ b/src/styles/pages/_organization-detail.scss
@@ -17,4 +17,32 @@
     bottom: 10px;
     font-size: 180%;
   }
+
+  .org-edit-input{
+    height: 36px;
+  }
+
+  .org-type-select{
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    opacity: 0;
+  }
+
+  .org-detail-expand-link{
+    text-decoration: underline;
+  }
+
+  .org-detail-expand-link:hover{
+    cursor: pointer;
+  }
+
+  .org-detail-alert-message{
+    position:absolute;
+    width: 450px;
+    left:10%;
+    top:30%;
+  }
 }
