--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -52,9 +52,26 @@
   ></agencyPicker>
 
   <ng-container *ngIf="objects">
-    <div class="m_T-4x">
+    <!-- Read Only -->
+    <div class="m_T-4x" *ngIf="!objectsEditable">
       <objects-and-permissions [objects]="objects"></objects-and-permissions>
     </div>
+
+    <!-- Editable -->
+    <ng-container *ngIf="objects.length && objectsEditable">
+      <div class="m_B-1x"><label>Permissions</label></div>
+      <ul class="usa-grid-full usa-unstyled-list background-light p_All-4x">
+        <li  *ngFor="let object of objects" class="object-item">
+          <strong>{{object.function.val}}</strong>
+          <div class="p_L-4x permission-list">
+          <span *ngFor="let permission of object.permission" class="permission-control-group">
+            <input [attr.id]="permissionId(permission, object)" type="checkbox" class="permission-input" [ngModel]="!permission.notChecked" (click)="onPermissionClick(permission)">
+            <label [attr.for]="permissionId(permission, object)" class="permission-label" >{{permission.val}}</label>
+          </span>
+          </div>
+        </li>
+      </ul>
+    </ng-container>
   </ng-container>
 
   <!-- Optional Message -->
