--- a/src/app/entity/entity-object-view.page.html
+++ b/src/app/entity/entity-object-view.page.html
@@ -4,7 +4,7 @@
 		<!--Sidebar-->
 		<aside>
 			<!--Side Navigation-->
-			<div class="side-nav-position" sam-sticky limit=1200 container="occupy-page">
+			<div class="side-nav-position" sam-sticky limit=1200 container="entity-object-view">
 				<img src="">
 				<nav>
 					<ul class="usa-sidenav-list">
