--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -4,7 +4,7 @@
   <aside class="usa-width-one-fourth">
     <br />
     <br />
-    <div sam-sticky limit=1200 container="occupy-page">
+    <div sam-sticky limit=1200 container="opportunity-page">
       <!--Logo-->
       <ng-container *ngIf="opportunity && (errorOrganization || logoUrl===null || errorLogo)">
         <img src="src/assets/img/logo-not-available.png" class="sidenav-logo" alt="Logo Not Available" width="160px" height="160px">
