--- a/src/app/role-management/rolemgmt-sidenav/rolemgmt-sidenav.template.html
+++ b/src/app/role-management/rolemgmt-sidenav/rolemgmt-sidenav.template.html
@@ -1,12 +1,8 @@
 <div class = "rolemgmt-sidenav">
-  <div class = "m_T-3em">
-    <div class = "p_B-1em">
-      <i class="fa fa-arrow-circle-left icn_pos" aria-hidden="true"></i>
-      <h3 class = "p_L-1em">Back to Workspace Home</h3>
-    </div>
+  <div>
     <img src="src/assets/img/blank_icon.png" class = "img_size" alt="GSA Image" tabindex="0">
   </div>
-  <div class = "p_L-1em">
+  <div>
     <h2 class = "min_txt">General Services Administration</h2>
   </div>
   <div class = "m_T-1em">
