latest code fix

--- a/src/app/assistance-listing/components/authorization-subform/authorization-subform.template.html
+++ b/src/app/assistance-listing/components/authorization-subform/authorization-subform.template.html
@@ -133,7 +133,7 @@
         </div>
 
         <samButton buttonText="Cancel" (onClick)="onSubFormCancelClick(i)"></samButton>
-        <samButton buttonText="Confirm" (onClick)="onConfirmClick()"></samButton>
+        <samButton buttonText="Confirm" (onClick)="onConfirmClick(i)"></samButton>
       </div>
     </ng-container>
   </div>
