--- a/src/app/assistance-listing/components/authorization-table/authorization-table.template.html
+++ b/src/app/assistance-listing/components/authorization-table/authorization-table.template.html
@@ -1,29 +1,65 @@
 <table [class.hide]="displayAuthInfo.length == 0">
   <thead>
   <th>Authorization(s)/Amendments</th>
-  <th>Actions</th>
+  <th colspan="2">Actions</th>
   </thead>
   <tbody>
-  <tr *ngFor="let auth of displayAuthInfo; let i=index">
-    <td>
-      {{auth}}
-    </td>
-    <td>
-      <ng-container *ngIf="!hideAddButton">
-        <a class="fal-table-edit" (click)="editAuth(i)" >Edit</a>
-        <i class="fa fa-pencil fal-table-edit" aria-hidden="true" (click)="editAuth(i)"></i>
-        <a class="fal-table-delete" (click)="removeAuth(i)">Remove</a>
-        <i class="fa fa-trash fal-table-delete" aria-hidden="true" (click)="removeAuth(i)"></i>
-      </ng-container>
+  <ng-container *ngFor="let auth of displayAuthInfo; let i=index">
+    <tr>
+      <td>
+        {{auth.label}}
+      </td>
+      <td>
+        <ng-container *ngIf="!hideAddButton">
+          <a class="fal-table-edit" (click)="editAuth(auth.index)" >Edit</a>
+          <i class="fa fa-pencil fal-table-edit" aria-hidden="true" (click)="editAuth(i)"></i>
+          <a class="fal-table-delete" (click)="removeAuth(auth.index)">Remove</a>
+          <i class="fa fa-trash fal-table-delete" aria-hidden="true" (click)="removeAuth(i)"></i>
+        </ng-container>
 
-      <ng-container *ngIf="hideAddButton">
-        <span class="fal-table-edit disabled">Edit</span>
-        <i class="fa fa-pencil fal-table-edit disabled" aria-hidden="true"></i>
-        <span class="fal-table-delete disabled">Remove</span>
-        <i class="fa fa-trash fal-table-delete disabled" aria-hidden="true"></i>
-      </ng-container>
+        <ng-container *ngIf="hideAddButton">
+          <span class="fal-table-edit disabled">Edit</span>
+          <i class="fa fa-pencil fal-table-edit disabled" aria-hidden="true"></i>
+          <span class="fal-table-delete disabled">Remove</span>
+          <i class="fa fa-trash fal-table-delete disabled" aria-hidden="true"></i>
+        </ng-container>
+      </td>
 
-    </td>
-  </tr>
+      <td>
+        <ng-container *ngIf="!hideAddButton">
+          <a class="fal-table-amend" (click)="addAmend(auth.index)">Amend</a>
+          <i class="fa fa-plus fal-table-amend" aria-hidden="true" (click)="addAmend(auth.index)"></i>
+        </ng-container>
+        <ng-container *ngIf="hideAddButton">
+          <span class="fal-table-amend disabled">Amend</span>
+          <i class="fa fa-plus fal-table-amend disabled" aria-hidden="true"></i>
+        </ng-container>
+      </td>
+    </tr>
+    <ng-container *ngFor="let amend of auth.children; let j=index">
+      <tr>
+        <td class="amend-table-col">
+          {{amend.label}}
+        </td>
+        <td>
+          <ng-container *ngIf="!hideAddButton">
+            <a class="fal-table-edit" (click)="editAuth(j, i)" >Edit</a>
+            <i class="fa fa-pencil fal-table-edit" aria-hidden="true" (click)="editAuth(j, i)"></i>
+            <a class="fal-table-delete" (click)="removeAuth(j, i)">Remove</a>
+            <i class="fa fa-trash fal-table-delete" aria-hidden="true" (click)="removeAuth(j, i)"></i>
+          </ng-container>
+
+          <ng-container *ngIf="hideAddButton">
+            <span class="fal-table-edit disabled">Edit</span>
+            <i class="fa fa-pencil fal-table-edit disabled" aria-hidden="true"></i>
+            <span class="fal-table-delete disabled">Remove</span>
+            <i class="fa fa-trash fal-table-delete disabled" aria-hidden="true"></i>
+          </ng-container>
+
+        </td>
+        <td></td>
+      </tr>
+    </ng-container>
+  </ng-container>
   </tbody>
 </table>
