--- a/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
@@ -1,82 +1,130 @@
 <div id="stickyLabel" class="sticky-label" *ngIf="programId">Edit Applying for Assistance - {{progTitle}}</div>
 
-<samRadioButton [label]="'Deadlines'"
-                [name]="'deadline-radio-buttons'"
-                [options]="deadlinesOptions"
-></samRadioButton>
+<form [formGroup]="falAssistanceForm">
 
-<samTextArea [label]="'Other Deadline Information'"
-             [name]="'deadlines-otherInfo'"
-></samTextArea>
+  <div formGroupName="deadlines">
+    <samRadioButton [label]="'Deadlines'"
+                    [name]="'deadlineFlag-radio-buttons'"
+                    [options]="deadlinesFlagOptions"
+                    formControlName="flag"
+    ></samRadioButton>
 
-<samCheckbox [label]="'Pre-Application Coordination'"
-             [name]="'preAppCord-checkbox'"
-             [hint]="'Select all that apply'"
-             [options]="preAppCordOptions"
-></samCheckbox>
+    <div [class.hide]="falAssistanceForm.value.deadlines.flag != 'yes'">
+      <samTextArea [label]="'Other Deadline Information'"
+                   [name]="'deadlines-description'"
+                   formControlName="description"
+      ></samTextArea>
+    </div>
+  </div>
 
-<samTextArea [label]="'Additional Information'"
-             [name]="'preAppCord-addInfo'"
-></samTextArea>
+  <div formGroupName="preApplicationCoordination">
+    <samCheckbox [label]="'Pre-Application Coordination'"
+                 [name]="'preAppCord-checkbox'"
+                 [hint]="'Select all that apply'"
+                 [options]="preAppCordOptions"
+                 formControlName="reports"
+    ></samCheckbox>
 
-<samCheckbox [label]="'Application Procedures'"
-             [name]="'appProc-checkbox'"
-             [hint]="'Select if applicable.'"
-             [options]="appProcOptions"
-></samCheckbox>
+    <samTextArea [label]="'Additional Information'"
+                 [name]="'preAppCord-description'"
+                 formControlName="description"
+                 [class.hide]="falAssistanceForm.value.preApplicationCoordination.reports.length == 0"
+    ></samTextArea>
+  </div>
 
-<samTextArea [label]="'Please list the steps for applying for assistance. Only include instructions not already covered by 2 CFR 200.'"
-             [name]="'appProc-description'"
-></samTextArea>
+  <div formGroupName="applicationProcedure">
 
-<samCheckbox [label]="'Criteria for Selecting Proposals'"
-             [name]="'selectionCriteria-checkbox'"
-             [hint]="'Select if applicable.'"
-             [options]="selectionCriteriaOptions"
-></samCheckbox>
+    <samCheckbox [label]="'Application Procedures'"
+                 [name]="'appProc-checkbox'"
+                 [hint]="'Select if applicable.'"
+                 [options]="appProcOptions"
+                 formControlName="isApplicable"
+    ></samCheckbox>
 
-<samTextArea [label]="'Please describe.'"
-             [name]="'selectionCriteria-description'"
-             [required]="true"
-></samTextArea>
+    <samTextArea [label]="'Please list the steps for applying for assistance. Only include instructions not already covered by 2 CFR 200.'"
+                 [name]="'appProc-description'"
+                 formControlName="description"
+    ></samTextArea>
 
-<samTextArea [label]="'Award Procedure'"
-             [hint]="'Describe how assistance is awarded. Include who approves the award and how assistance is distributed.'"
-             [name]="'awardProcedure-description'"
-             [required]="true"
-></samTextArea>
+  </div>
 
-<samSelect [label]="'Date Range for Approval/Disapproval'"
-           [hint]="'Select the range that best represents how much time the approval process takes.'"
-           [name]="'approval-input'"
-           [options]="dateRangeOptions"
-           [required]="true"
-></samSelect>
+  <div formGroupName="selectionCriteria">
 
-<samTextArea [label]="'Other Approval Information'"
-             [hint]="'Provide an additional information if appropriate.'"
-             [name]="'approval-description'"
-></samTextArea>
+    <samCheckbox [label]="'Criteria for Selecting Proposals'"
+                 [name]="'selectionCriteria-checkbox'"
+                 [hint]="'Select if applicable.'"
+                 [options]="selectionCriteriaOptions"
+                 formControlName="isApplicable"
+    ></samCheckbox>
 
-<samSelect [label]="'Renewals'"
-           [hint]="'Select the range that best represents when an awardee may apply for a renewal or extension.'"
-           [name]="'approval-input'"
-           [options]="dateRangeOptions"
-           [required]="true"
-></samSelect>
+    <samTextArea [label]="'Please describe.'"
+                 [name]="'selectionCriteria-description'"
+                 [required]="true"
+                 formControlName="description"
+    ></samTextArea>
+  </div>
 
-<samTextArea [label]="'Other Renewal Information'"
-             [hint]="'Describe renewal or extension procedures.'"
-             [name]="'renewal-description'"
-></samTextArea>
+  <div formGroupName="awardProcedure">
+    <samTextArea [label]="'Award Procedure'"
+                 [hint]="'Describe how assistance is awarded. Include who approves the award and how assistance is distributed.'"
+                 [name]="'awardProcedure-description'"
+                 [required]="true"
+                 formControlName="description"
+    ></samTextArea>
+  </div>
 
-<samSelect [label]="'Appeals'"
-           [hint]="'Select the range that best represents how long an applicant has to appeal a decision.'"
-           [name]="'appeals-input'"
-           [options]="dateRangeOptions"
-           [required]="true"
-></samSelect>
-<samTextArea [label]="'Other Appeals Information'"
-             [hint]="'Describe appeal, rework, or other options for applications that are not approved.'"
-             [name]="'appeals-description'"
-></samTextArea>
+  <div formGroupName="approval">
+    <samSelect [label]="'Date Range for Approval/Disapproval'"
+               [hint]="'Select the range that best represents how much time the approval process takes.'"
+               [name]="'approval-input'"
+               [options]="dateRangeOptions"
+               [required]="true"
+               formControlName="interval"
+    ></samSelect>
+
+    <samTextArea [label]="'Other Approval Information'"
+                 [hint]="'Provide an additional information if appropriate.'"
+                 [name]="'approval-description'"
+                 formControlName="description"
+    ></samTextArea>
+  </div>
+
+  <div formGroupName="renewal">
+    <samSelect [label]="'Renewals'"
+               [hint]="'Select the range that best represents when an awardee may apply for a renewal or extension.'"
+               [name]="'approval-input'"
+               [options]="dateRangeOptions"
+               [required]="true"
+               formControlName="interval"
+    ></samSelect>
+
+    <samTextArea [label]="'Other Renewal Information'"
+                 [hint]="'Describe renewal or extension procedures.'"
+                 [name]="'renewal-description'"
+                 formControlName="description"
+    ></samTextArea>
+  </div>
+
+  <div formGroupName="appeal">
+    <samSelect [label]="'Appeals'"
+               [hint]="'Select the range that best represents how long an applicant has to appeal a decision.'"
+               [name]="'appeals-input'"
+               [options]="dateRangeOptions"
+               [required]="true"
+               formControlName="interval"
+    ></samSelect>
+    <samTextArea [label]="'Other Appeals Information'"
+                 [hint]="'Describe appeal, rework, or other options for applications that are not approved.'"
+                 [name]="'appeals-description'"
+                 formControlName="description"
+    ></samTextArea>
+  </div>
+
+  <div class="pull-left">
+    <samButton [buttonType]="(hideAddButton ? 'disabled' : 'default')" buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
+    <samButton [buttonType]="(hideAddButton ? 'disabled' : 'default')" buttonText="Previous" (onClick)="onPreviousClick($event)"></samButton>
+    <samButton [buttonType]="(hideAddButton ? 'disabled' : 'default')" buttonText="Save and Exit" (onClick)="onSaveExitClick($event)"></samButton>
+    <samButton [buttonType]="(hideAddButton ? 'disabled' : 'default')" buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
+  </div>
+
+</form>
