--- a/src/app/organization-detail/AAC-request/AAC-request.template.html
+++ b/src/app/organization-detail/AAC-request/AAC-request.template.html
@@ -1,6 +1,8 @@
 <section class="aac-request-page usa-grid relative">
   <div class="usa-width-one-fourth">&nbsp;</div>
-  <div class="usa-width-two-thirds">
+
+  <!--Edit AAC Request Page-->
+  <div class="usa-width-two-thirds" [hidden]="!requestIsEdit">
     <h2 class="p_T-3x">Request Activity Address Code (AAC)</h2>
     <div class="usa-width-one-whole aac-request-div-underline">
       <p class="p_T-3x p_B-4x">Lorum ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
@@ -30,15 +32,15 @@
           </samRadioButton>
         </labelWrapper>
 
-        <agencyPicker *ngIf="aacOfficeRadioModel === 'Federal Office'" [label]="'Organization Name'" [multimode]="true"></agencyPicker>
-        <samText *ngIf="aacOfficeRadioModel === 'State/Local Office'" [name]="'org-name-input'" [label]="'Organization Name'"></samText>
-        <form class="usa-width-one-whole aac-contractor-section" *ngIf="aacOfficeRadioModel === 'Contractor Office'">
-          <samText [name]="'contract-name-input'" [label]="'Contractor Name'"></samText>
-          <samText [name]="'contract-number-input'" [label]="'Contract Name'"></samText>
-          <samText [name]="'org-name-input'" [label]="'OAGE Code (For CAGE code reference: https://cage.dla.mil/)'"></samText>
-          <samText [name]="'org-name-input'" [label]="'Contract Administration Name'"></samText>
-          <labelWrapper #contractorStartDateWrapper class="usa-width-one-half" [label]="'Contract Expire Date'" [name]="'expire-date'">
-            <samDate (valueChange)="setContractExpireDate($event)" [label]="'Start Date'" name='start-date'></samDate>
+        <agencyPicker *ngIf="aacOfficeRadioModel === 'Federal Office'" (organization)="getFederalOrgName($event)" [label]="'Organization Name'" [multimode]="false"></agencyPicker>
+        <samText *ngIf="aacOfficeRadioModel === 'State/Local Office'" [name]="'org-name-input'" [label]="'Organization Name'" [value]="aacStateOrgName"></samText>
+        <form class="usa-width-two-thirds aac-contractor-section" *ngIf="aacOfficeRadioModel === 'Contractor Office'" [formGroup]="contractorForm">
+          <samText [required]='true' [control]="contractorForm.get('contractName')" formControlName="contractName" [name]="'contract-name-input'" [label]="'Contractor Name'"></samText>
+          <samText [required]='true' [control]="contractorForm.get('contractNum')" formControlName="contractNum" [name]="'contract-number-input'" [label]="'Contract Name'"></samText>
+          <samText [required]='true' [control]="contractorForm.get('OAGECode')" formControlName="OAGECode" [name]="'oage-input'" [label]="'OAGE Code (For CAGE code reference: https://cage.dla.mil/)'"></samText>
+          <samText [required]='true' [control]="contractorForm.get('contractAdmin')" formControlName="contractAdmin" [name]="'admin-name-input'" [label]="'Contract Administration Name'"></samText>
+          <labelWrapper #contractorExpireDateWrapper [required]='true' class="usa-width-one-half" [label]="'Contract Expire Date'" [name]="'expire-date'">
+            <samDate (valueChange)="setContractExpireDate($event)" [label]="'Expire Date'" name='expire-date'></samDate>
           </labelWrapper>
         </form>
 
@@ -51,10 +53,10 @@
           <samCheckbox [(model)]="aacReasonCbxModel" [name]="aacReasonCbxConfig.name" [options]="aacReasonCbxConfig.options" [label]="''" [errorMessage]="aacReasonCbxConfig.errorMessage" [hasSelectAll]="false">
           </samCheckbox>
         </labelWrapper>
-        <div class="usa-width-one-whole aac-fpds-report-code-section p_T-4x p_B-4x" *ngIf="isReasonContainsFPDSReport()">
-          <samText [name]="'agency-code-input'" [label]="'Sub-tier Agency Code'"></samText>
-          <samText [name]="'cgac-input'" [label]="'CGAC Code'"></samText>
-        </div>
+        <form class="usa-width-two-thirds aac-fpds-report-code-section p_T-4x p_B-4x" *ngIf="isReasonContainsFPDSReport()" [formGroup]="fpdsReportForm">
+          <samText [required]='true' [control]="fpdsReportForm.get('agencyCode')" formControlName="agencyCode" [name]="'agency-code-input'" [label]="'Sub-tier Agency Code'"></samText>
+          <samText [required]='true' [control]="fpdsReportForm.get('cgacCode')" formControlName="cgacCode" [name]="'cgac-input'" [label]="'CGAC Code'"></samText>
+        </form>
       </div>
     </div>
     <div class="usa-width-one-whole aac-request-div-underline p_B-6x" *ngIf="isSingleAACRequest()">
@@ -64,9 +66,41 @@
       </div>
     </div>
     <div class="usa-width-one-whole p_B-6x" *ngIf="isSingleAACRequest() || isMultiAACRequest()">
-      <button class="usa-button-primary p_R-4x p_L-6x pull-right">Review <i class="fa fa-arrow-right"></i></button>
-      <button class="usa-button-outline p_R-6x p_L-6x pull-right">Cancel</button>
+      <button class="usa-button-primary p_R-4x p_L-6x pull-right" (click)="onReviewAACRequestClick()">Review <i class="fa fa-arrow-right"></i></button>
+      <button class="usa-button-outline p_R-6x p_L-6x pull-right" (click)="onCancelAACRequestClick()">Cancel</button>
     </div>
   </div>
 
+  <!--Review AAC Request Page-->
+  <div class="usa-width-two-thirds" *ngIf="requestIsReview">
+    <h2 class="p_T-3x">Confirm AAC Request</h2>
+    <div class="usa-width-one-whole aac-request-div-underline">
+      <p class="p_T-3x p_B-4x">Lorum ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+        ex ea commodo consequat.</p>
+    </div>
+    <div class="usa-width-one-whole aac-request-div-underline p_B-6x">
+      <h3 class="p_T-2x p_B-4x">Requesting Office Information</h3>
+      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngFor="let pair of aacObj.officeInfo">
+        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{pair.desc}}:</h4></span>
+        <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x">&nbsp;{{pair.value}}</p>
+      </div>
+    </div>
+    <div class="usa-width-one-whole aac-request-div-underline p_B-6x">
+      <h3 class="p_T-2x p_B-4x">Reason for AAC Request</h3>
+      <div class="usa-width-one-whole m_L-3x m_B-1x" *ngFor="let pair of aacObj.reasonInfo">
+        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{pair.desc}}:</h4></span>
+        <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x">&nbsp;{{pair.value}}</p>
+      </div>
+    </div>
+    <div class="usa-width-one-whole aac-request-div-underline p_B-6x">
+      <h3 class="p_T-2x p_B-4x">Office Address Information</h3>
+      <p class="m_L-3x m_B-1x" *ngFor="let address of orgAddresses">
+        <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{address.addrModel.addrType}}:</h4></span>
+        <span class="usa-width-two-thirds p_T-2x p_B-1x">{{address.addrModel.street}}<br>{{address.addrModel.city}}, {{address.addrModel.state}}&nbsp;{{address.addrModel.postalCode}}<br>{{address.addrModel.country}}</span>
+      </p>
+    </div>
+    <button class="usa-button-primary p_R-4x p_L-4x pull-right">Confirm</button>
+    <button class="usa-button-outline p_R-6x p_L-4x pull-right" (click)="onEditFormClick()"><i class="fa fa-arrow-left"></i>Edit</button>
+  </div>
 </section>
