[SAM-6965] Add na checkbox to fy table

--- a/src/app/assistance-listing/components/fiscal-year-table/fiscal-year-table.template.html
+++ b/src/app/assistance-listing/components/fiscal-year-table/fiscal-year-table.template.html
@@ -4,4 +4,11 @@
               [hint]="hint"
               [required]="required">
 
+  <div *ngIf="fyTableGroup" [formGroup]="fyTableGroup">
+    <samCheckbox [name]="name + '-checkbox'"
+                 [options]="checkboxOptions"
+                 [formControlName]="'naCheckbox'"
+    ></samCheckbox>
+  </div>
+
 </labelWrapper>
