[SAM-6965] Add textarea to fy table component

--- a/src/app/assistance-listing/components/fiscal-year-table/fiscal-year-table.template.html
+++ b/src/app/assistance-listing/components/fiscal-year-table/fiscal-year-table.template.html
@@ -9,6 +9,12 @@
                  [options]="checkboxOptions"
                  [formControlName]="'naCheckbox'"
     ></samCheckbox>
+
+    <samTextArea [name]="name + '-textarea'"
+                 [required]="false"
+                 [hidden]="model.checkbox.indexOf('na') !== -1"
+                 [formControlName]="'textarea'"
+    ></samTextArea>
   </div>
 
 </labelWrapper>
