[SAM-6965] Add year select to fy table

--- a/src/app/assistance-listing/components/fiscal-year-table/fiscal-year-table.template.html
+++ b/src/app/assistance-listing/components/fiscal-year-table/fiscal-year-table.template.html
@@ -49,7 +49,16 @@
         </tbody>
       </table>
 
+      <samSelect *ngIf="showForm"
+                 [hint]="'Select a Year'"
+                 [name]="name + '-year-select'"
+                 [required]="false"
+                 [options]="yearOptions"
+                 [formControlName]="'year'"
+      ></samSelect>
+
       <samTextArea *ngIf="showForm"
+                   [hint]="'Please describe funded projects:'"
                    [name]="name + '-textarea'"
                    [required]="false"
                    [formControlName]="'textarea'"
