--- a/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/applying-for-assistance/applying-for-assistance.template.html
@@ -61,6 +61,7 @@
                  [name]="'selectionCriteria-description'"
                  [required]="true"
                  formControlName="description"
+                 [class.hide]="falAssistanceForm.value.selectionCriteria.isApplicable[0] != true"
     ></samTextArea>
   </div>
 
