--- a/src/app/app-components/type-ahead-multiselect/type-ahead.template.html
+++ b/src/app/app-components/type-ahead-multiselect/type-ahead.template.html
@@ -4,8 +4,9 @@
         <!-- Text input -->
         <div>
           <label *ngIf="labelText || labelText" [attr.for]="id">{{labelText}}<span class="usa-sr-only">&nbsp;autocomplete</span></label>
-          <input [attr.id]="id" #input autocomplete="off" [attr.placeholder]="placeholder" [attr.name]="name" type="text" (focus)="showDropdown()" (change)="onChange()" (keydown)="onKeydown($event)" (keyup)="onKeyup($event)" [(ngModel)]="inputValue">
-          <span class="usa-type-ahead-search"><i *ngIf="!hasFocus" class="fa fa-search"></i><i tabindex="0" (click)="showDropdown()" class="fa fa-chevron-down"></i></span>
+          <span *ngIf="showSpecialIndicator" class="usa-type-ahead-search"><i *ngIf="!hasFocus" class="fa fa-search"></i></span>
+          <input id="type-search" #input autocomplete="off" [attr.placeholder]="placeholder" [attr.name]="name" type="text" (focus)="showDropdown()" (change)="onChange()" (keydown)="onKeydown($event)" (keyup)="onKeyup($event)" [(ngModel)]="inputValue">
+          <span *ngIf="showSpecialIndicator" class="usa-type-ahead-dropdown"><i tabindex="0" (click)="showDropdown()" class="fa fa-chevron-down"></i></span>
         </div>
         <!-- Lists data if array of strings is passed to component -->
         <ul id="sam-autocomplete-results-kv" #resultsList *ngIf="results && hasFocus">
@@ -14,8 +15,8 @@
         <!-- Lists data if array of objects with key/value pair is passed to component -->
         <ul id="sam-autocomplete-results" #resultsListKV *ngIf="filteredKeyValuePairs && hasFocus">
           <li *ngFor="let obj of filteredKeyValuePairs" (click)="emitSelected(obj)" (keydown)="$event.which==13 ? emitSelected(obj) : ''">
-            {{obj.label}}
-            <i *ngIf="checkSelectedList(obj)" tabindex="0" class="fa fa-plus-square fa-pull-right"></i>
+            {{obj[config.keyValueConfig.valueProperty]}}
+            <i *ngIf="checkSelectedList(obj) && showSpecialIndicator" tabindex="0" class="fa fa-plus-square fa-pull-right"></i>
           </li>
         </ul>
         <!-- Screen Reader Only, reads results and selections -->
