move icon to left side

--- a/src/styles/components/role-management/_rolemgmt-content.scss
+++ b/src/styles/components/role-management/_rolemgmt-content.scss
@@ -105,4 +105,8 @@
     text-align: left;
     padding-left: 0;
   }
+
+  .request-block .usa-accordion-button {
+    background-position: left .5em center;
+  }
 }
